--- a/blog.html
+++ b/blog.html
@@ -22,31 +22,31 @@
   	<div class="nav">
       <div class="nav-link menu-link" id="menu">menu</div>
   		<div class="nav-link home-link" id="home" ><a href="index.html">home</a></div>
-      <div class="nav-link about-link" id="about"><a href="index.html">about</a></div>
-      <div class="nav-link exp-link" id="exp"><a href="index.html">experience</a></div>
-      <div class="nav-link con-link" id="con"><a href="index.html">connect</a></div>
+      <div class="nav-link about-link" id="about"><a href="index.html#aboutMe">about</a></div>
+      <div class="nav-link exp-link" id="exp"><a href="index.html#experience">experience</a></div>
+      <div class="nav-link con-link" id="con"><a href="index.html#connect">connect</a></div>
       <div class="nav-link blog-link" id="blog"><a href="blog.html">blog</a></div>
   	</div>
     <div class="blog-landing">
       <div class="name-banner">
         <h1>stella's blog</h1>
       </div>
-      <div class="circle blog-circle"><p >check out my newest post:</p> <div class="circle-text">Making a Difference by Design & Joining Voteology</div></div>
+      <div class="circle blog-circle"><a href="#Voteology"><p >check out my newest post:</p> <div class="circle-text">Making a Difference by Design & Joining Voteology</div></a></div>
     </div>
     <div class="newest-posts content">
         <div class="section-title"><h2>my newest posts</h2></div>
         <div class="posts-grid">
-          <div class="posts-row"><div class="post-square Voteology-square">Making a Difference by Design & Joining Voteology
-            </div><div class="post-square job-square">I Got a Job at Facebook!
-            </div></div><div class="posts-row"><div class="post-square ghc-square">My Grace Hopper Experience
-           </div><div class="post-square welcome-square"> Welcome to My Personal Site!
+          <div class="posts-row"><div class="post-square Voteology-square"><a href="#Voteology">Making a Difference by Design & Joining Voteology
+            </a></div><div class="post-square job-square"><a href="#FacebookJob">I Got a Job at Facebook!</a>
+            </div></div><div class="posts-row"><div class="post-square ghc-square"><a href="#GHC19">My Grace Hopper Experience</a>
+           </div><div class="post-square welcome-square"><a href="#Welcome"> Welcome to My Personal Site!</a>
             </div></div>
-            <div class="all-button">view all posts</div>
+            <div class="all-button"><a href="#allPosts">view all posts</a></div>
         </div>
 
     </div>
     <div class="blog-section content">
-    	<div class="story Voteology-story">
+    	<div class="story Voteology-story" id="Voteology">
 	        <div class="section-title"><h2>Making a Difference by Design & Joining Voteology</h2></div>
 	        <div class="blog-date">July 16, 2020</div>
 	        <div class="blog-content">
@@ -66,19 +66,19 @@
           <div class="tag">#Voteology</div><div class="tag">#Vote2020</div>
         </div>
       </div>
-      <div class="story job-story">
+      <div class="story job-story" id="FacebookJob">
         <div class="section-title"><h2>I Got a Job at Facebook!</h2></div>
         <div class="blog-date">October 28, 2019</div>
         <div class="blog-content">
           Recruiting is stressful! I've been figuring out where I'll be working full-time since July - JULY! It's the end of October now, and at last I know where I'm ending up. It wasn't easy getting here, but now that I'm on the otherside, I thought I'd share my experiences.<br><br>
-          I started off in a good spot - I loved my internship and was lucky enough to receive a return offer. From there, I narrowed my search to companies I would consider over Capital One. In the summer, I started reaching out to my network including any recruiters I had spoken to during my internship search and friends who worked or interned at companies I was interested in. I'm still pretty connected to many of my high school classmates which proved super helpful during this stage. I also attended the Grace Hopper Celebration in Orlando, Florida which was a great networking opportunity.<br><br>
+          I started off in a good spot - I loved my <a href="#CapitalOneInternship">internship</a> and was lucky enough to receive a return offer. From there, I narrowed my search to companies I would consider over Capital One. In the summer, I started reaching out to my network including any recruiters I had spoken to during my internship search and friends who worked or interned at companies I was interested in. I'm still pretty connected to many of my high school classmates which proved super helpful during this stage. I also attended the <a href="#GHC19">Grace Hopper Celebration</a> in Orlando, Florida which was a great networking opportunity.<br><br>
           Soon enough, I was interviewing all over the place. Some companies required coding challenges, while others went straight to phone screens. Regardless, I had to seriously brush up on my technical interview skills. My primary resources were LeetCode for practice problems, the book, <a href="https://www.amazon.com/Elements-Programming-Interviews-Insiders-Guide/dp/1479274836">Elements of Programming Interviews</a>, and the YouTube channel, <a href="https://www.youtube.com/channel/UCmJz2DV1a3yfgrR7GqRtUUA">Back To Back SWE</a>. I focused mostly on improving my dynamic programming skills and algorithm knowledge. All the practice also helped with being quicker on my feet when it came to common types of interview questions. I visited a few companies on-site and I was surprised by how prepared I felt. However, I don't think it was my technical knowledge that ended up helping me get my offers, instead I believe it was my communication skills that gave me my edge. I talked through each stage of my thought process, thouroughly tested my code over edge cases, and iterated as necessary. In one of my first interviews I was sure that I flunked the technical problem I was given, but at the very end my interviewer told me that she liked how I thought. I ended up getting that offer. Communication skills can make all the difference!<br><br>
           It was a lot to manage, but once I got through all my interviews I was so excited to receieve a few offers. The decision, on the other hand, started to get me down. I loved my internship at Capital One and they offered me a spot in New York, where I so badly wanted to be. On the other hand, I received incredible offers from Microsoft, Amazon, and Facebook. The opportunity for learning and growth at those companies would be hard to turn down. <br><br>Finally, after much deliberation, I am so excited to annouce that I will be joining Facebook as a Software Engineer in the fall of 2020. I'll be located in Seattle, Washington and I couldn't be more excited for what's to come. </div>
         <div class="blog-tags">
           <div class="tag">#recruiting</div><div class="tag">#facebook</div>
         </div>
       </div>
-      <div class="story ghc-story">
+      <div class="story ghc-story" id="GHC19">
         <div class="section-title"><h2>My Grace Hopper Experience</h2></div>
         <div class="blog-date">October 5, 2019</div>
         <div class="blog-content">The Grace Hopper Celebration of Women In Computing is a 4-day event held every year. The conference aims to inspire and empower young women entering the tech industry through speakers, events, mentoring, and a massive career fair. I attended this year's event from October 1-4 in Orlando, Florida. <br><br>
@@ -94,7 +94,7 @@
           <div class="tag hide">#ghc19</div>
         </div>
       </div>
-      <div class="story welcome-story">
+      <div class="story welcome-story" id="Welcome">
         <div class="section-title"><h2>Welcome to My Personal Site!</h2></div>
         <div class="blog-date">August 20, 2019</div>
         <div class="blog-content">Thanks for stopping by! I built this site as a way to fully represent who I am to those who might know me only as a name on a resume. In this blog I hope to cover all the different things that interest and excite me. I'd love to write posts on exciting tech innovations, running my first marathon, my journey as a vegan and more! <br><br>If you have any questions on this site, who I am, or anything else feel free to contact me at <a href="mailto:stelsots@gmail.com">stelsotos@gmail.com</a>. This site is a work in progress, but I'd still love to hear any feedback or if you find any bugs :) <br><br>Thanks! <br>Stella </div>
@@ -102,7 +102,7 @@
           <div class="tag hide">#personalsite</div><div class="tag ">#tech</div>
         </div>
       </div>
-      <div class="story capone-story">
+      <div class="story capone-story" id="CapitalOneInternship">
         <div class="section-title"><h2>A Great Summer at Capital One</h2></div>
         <div class="blog-date">August 8, 2019</div>
         <div class="blog-content">I've had a wonderful experience during my 10-week software engineering internship at Capital One in the McLean headquarters. It was exciting to be fully integrated into an agile team and to release my own code to the consumer-facing credit card application. I couldn't believe how quickly I was able to make real contributions to projects that will have a significant impact on the business. I am also excited to share that I have recently received my certification as an Amazon Web Services Developer Associate. <br><br>Huge thank you to my team, the Mighty Minions, my manager, Khosro Akhavan Astaneh and my teammates: Derek Warren, James Guan, Isaac Cyril, Jun Li, Sunil Chakrahari, and Rabin Paudyal. This internship has allowed me to grow so much in both my technological and professional skills. Thank you again to my fantastic team and to Capital One for the amazing opportunity.</div>
@@ -134,20 +134,20 @@
     </div>
     </div>
 
-    <div class="allposts content ">
+    <div class="allposts content " id="allPosts">
         <div class="section-title"><h2>all posts</h2></div>
         <div class="two-col">
           <div class="my-col">
             <ul>
-               <li class="Voteology-link">Making a Difference by Design & Joining Voteology</li>
-              <li class="job-link">I Got a Job at Facebook!</li>
-              <li class="ghc-link">My Grace Hopper Experience</li>
+               <li class="Voteology-link"><a href="#Voteology">Making a Difference by Design & Joining Voteology</a></li>
+              <li class="job-link"><a href="#FacebookJob">I Got a Job at Facebook!</a></li>
+              <li class="ghc-link"><a href="#GHC19">My Grace Hopper Experience</a></li>
               
             </ul>
           </div><div class="my-col ">
             <ul>
-            	<li class="welcome-link">Welcome to My Personal Site!</li>
-              <li class="capone-link">A Great Summer at Capital One</li>
+            	<li class="welcome-link"><a href="#Welcome">Welcome to My Personal Site!</a></li>
+              <li class="capone-link"><a href="#CapitalOneInternship">A Great Summer at Capital One</a></li>
             </ul>
           </div>
         </div>
@@ -163,62 +163,6 @@
       document.getElementById('blog').style.display = 'block';
       document.getElementById('menu').style.display = 'none';
       
-    });
-
-    $('.blog-circle').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.Voteology-story').offset().top
-      }, 200);
-    });
-    $('.job-square').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.job-story').offset().top
-      }, 200);
-    });
-    $('.ghc-square').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.ghc-story').offset().top
-      }, 200);
-    });
-    $('.welcome-square').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.welcome-story').offset().top
-      }, 200);
-    });
-    $('.Voteology-square').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.Voteology-story').offset().top
-      }, 200);
-    });
-    $('.Voteology-link').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.Voteology-story').offset().top
-      }, 200);
-    });
-    $('.job-link').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.job-story').offset().top
-      }, 200);
-    });
-    $('.ghc-link').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.ghc-story').offset().top
-      }, 200);
-    });
-    $('.welcome-link').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.welcome-story').offset().top
-      }, 200);
-    });
-    $('.capone-link').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.capone-story').offset().top
-      }, 200);
-    });
-    $('.all-button').click(() => {
-      $('html, body').animate({
-          scrollTop: $('.allposts').offset().top
-      }, 200);
     });
   </script>
   </html>
