--- a/gallery-arts2220.html
+++ b/gallery-arts2220.html
@@ -39,7 +39,7 @@
             <br><br>I featured many vintage advertisements for meat, demonstrating America's long running attachment to and nostalgia for these products. The repetition in my imagery is used to showcase the scale of this issue. The landscapes I featured are faded and depleted as a result of this phenomenon.
             <br><br>This was one of my very first projects using Adobe Photoshop. I am proud of how these images turned out and of the clarity of my message.
             <br><br>
-            <a href="blog.html">Click here to return to my blog!</a>
+            <a href="blog.html#Voteology">Click here to return to my blog!</a>
           </div>
     </div>
     </div>
