added back to top button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </head>
   <body>
-  	<div class="nav">
+  	<div class="nav" id="top">
       <div class="nav-link menu-link" id="menu">menu</div>
   		<div class="nav-link home-link" id="home" ><a href="index.html">home</a></div>
       <div class="nav-link about-link" id="about" ><a href="#aboutMe">about</a></div>
@@ -31,6 +31,7 @@
       <div class="nav-link con-link" id="con"><a href="#connect">connect</a></div>
       <div class="nav-link blog-link" id="blog"><a href="blog.html">blog</a></div>
   	</div>
+    <div class="back-to-top" id="arrow"><a href="index.html#top"><img src="images/upArrow.png"/></a></div>
   	<div class="landing">
   		<div class="name-banner">
   			<h1>stella sotos</h1>
@@ -162,5 +163,13 @@
       document.getElementById('menu').style.display = 'none';
       
     });
+    window.addEventListener("scroll",function() { 
+     if(window.scrollY > Math.round(window.innerHeight / 100) +180) {
+        document.getElementById('arrow').style.display = 'block';
+     }
+     else {
+        document.getElementById('arrow').style.display = 'none';
+
+   }},false);
   </script>
 </html>
