added Voteology to work experience

--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
         </div>
         <div class="work-item">
           <div class="work-logo">
+            <img src ="images/VoteologyImages/Voteology_Logo.png" alt="Voteology logo"/>
+            <div class="work-date">2020 - present</div>
+          </div><div class="work-info">
+            <div class="work-title">Head of Design at Voteology</div>
+            <div class="work-desc "><p>Led design initiatives for nonprofit start-up aiming to promote voter engagement in college students. Created instagram graphics with Adobe Photoshop and set uniform styles to be used throughout branding.
+              <br><br><a href="blog.html#Voteology">Read more about my involvement in Voteology in my blog! </a></p></div>
+          </div>
+        </div>
+        <div class="work-item">
+          <div class="work-logo">
             <img src ="images/capitalone.png" alt="Capital One logo"/>
             <div class="work-date">Summer 2019</div>
           </div><div class="work-info">
