updated meta sharing tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Stella's Personal Website" />
+    <meta property="og:description" content="I'm a recent graduate of the University of Virginia with a double major in computer science and math. I love what I studied and I can't wait to pursue a career as a software engineer at Facebook, starting in August 2020." />
+    <meta property="og:image" content="http://www.stellasotos.com/images/pfp.jpg" />
+    <meta property="og:url" content="https://www.stellasotos.com/" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@StellaSotos">
+    <meta name="twitter:title" content="Stella's Personal Website">
+    <meta name="twitter:description" content="I'm a recent graduate of the University of Virginia with a double major in computer science and math. I love what I studied and I can't wait to pursue a career as a software engineer at Facebook, starting in August 2020.">
+    <meta name="twitter:image" content="http://www.stellasotos.com/images/pfp.jpg">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146161243-1"></script>
   <script
